Modify Makefile.inc for proper compiling

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -13,7 +13,9 @@
 # NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE
 # USE OR PERFORMANCE OF THIS SOFTWARE.
 #
-CC = gcc
+#--- Nick, for compiling for HA41 (arm)
+#CC = gcc
+CC = arm-linux-gnueabi-gcc
 LIB=lib
 DUT=dut
 CA=ca
@@ -42,7 +44,10 @@ MAKE=make
 #CFLAGS = -g -O2 -D_REENTRANT  -DWFA_WMM_PS_EXT -DWFA_WMM_AC -DWFA_PC_CONSOLE -DWFA_STA_TB -Wall -I../inc
 
 # This is for WPA2 as default
-CFLAGS = -g -O2 -D_REENTRANT -Wall -I../inc
+
+#--- Nick, for compiling for HA41 (STA)
+# CFLAGS = -g -O2 -D_REENTRANT -Wall -I../inc
+CFLAGS = -g -O2 -D_REENTRANT -DWFA_STA_TB -Wall -I../inc
 
 DUTLIBS = ../lib/libwfa_dut.a -lpthread
 CALIBS = ../lib/libwfa_ca.a -lpthread
